--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "openai": "^4.63.0",
