--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "openai": "^4.63.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
