--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "file-loader": "^6.2.0",
+    "jose": "^5.9.6",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.445.0",
+    "mongodb": "^6.10.0",
     "next": "14.2.13",
     "openai": "^4.63.0",
     "react": "^18",
