--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openai": "^4.63.0",
     "react": "^18",
     "react-dom": "^18",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "eslint": "^8",
